# fileserver

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  Taskfile.yml  build.rs  docker-compose.yml  fileserver.service
client/: Cargo.toml  config.toml
client/src/: client.rs  config.rs  main.rs  operations.rs
common/: Cargo.toml  build.rs
common/src/: error.rs  lib.rs
docker/: config.toml
proto/: fileserver.proto
server/: Cargo.toml  config.prod.toml  config.toml
server/src/: auth.rs  config.rs  file_handler.rs  main.rs  privilege.rs  service.rs
server/test-data/documents/: sample.txt
server/test-data/shared/: data.json  readme.md
server/test-data/workspace/: notes.txt  test-file.txt
tests/: integration_test.rs
