[workspace]
resolver = "2"
members = [
    "server",
    "client", 
    "common"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

[workspace.dependencies.tonic-build]
version = "0.11"